# kaggle-join-bot

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  run.sh
notebook/: get_network.ipynb
src/: kaggle.py  kaggle_api.py  local.py  main.py  spreadsheet.py  tmp.py
