[project]
name = "kaggle-join-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "google-auth>=2.38.0",
    "gspread>=6.2.0",
    "kaggle>=1.7.4.2",
    "numpy>=2.2.3",
    "polars>=1.25.1",
    "python-dotenv>=1.0.1",
    "selenium>=4.29.0",
    "slack-sdk>=3.34.0",
    "tenacity>=9.0.0",
]

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.3.6",
    "ruff>=0.11.0",
]
